--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
+    "@nomicfoundation/hardhat-ethers": "^4.0.2",
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "chai": "^4.5.0",
+    "ethers": "^6.15.0",
     "hardhat": "^3.0.7"
   },
   "type": "module",
