--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typechain": "^8.3.0"
   },
   "dependencies": {
+    "@chainlink/contracts": "^1.2.0",
     "@openzeppelin/contracts": "^5.4.0",
     "@openzeppelin/contracts-upgradeable": "^5.4.0"
   }
