--- a/.env.example
+++ b/.env.example
@@ -29,35 +29,55 @@ CHAINS_JSON=[{"name":"sepolia","wss_url":"wss://sepolia.infura.io/ws/v3/YOUR_INF
 # Private Key (DO NOT COMMIT ACTUAL .env FILE)
 PRIVATE_KEY=your_private_key_here
 
-# Ethereum RPC URLs (L1)
-ETHEREUM_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/your-api-key
-SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/your-api-key
+# ============ L1 Configuration (Ethereum) ============
+L1_CHAIN_ID=11155111
+L1_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/your-api-key
+L1_WSS_URL=wss://eth-sepolia.g.alchemy.com/v2/your-api-key
+L1_CONFIRMATIONS=12
 
-# Arbitrum RPC URLs (L2)
-ARBITRUM_RPC_URL=https://arb1.arbitrum.io/rpc
-ARBITRUM_SEPOLIA_RPC_URL=https://sepolia-rollup.arbitrum.io/rpc
-ARBITRUM_GOERLI_RPC_URL=https://goerli-rollup.arbitrum.io/rpc
-
-# Etherscan API Keys (for verification)
-ETHERSCAN_API_KEY=your_etherscan_api_key
-ARBISCAN_API_KEY=your_arbiscan_api_key
-
-# L1 Contract Addresses (deployed)
+# L1 Contract Addresses (deployed on Sepolia)
+L1_COLLATERAL_VAULT=
 L1_STATE_REGISTRY=
 L1_LOYALTY_USD=
-L1_COLLATERAL_VAULT=
 L1_GATEWAY=
 
-# L2 Contract Addresses (deployed)
+# ============ L2 Configuration (Arbitrum) ============
+L2_CHAIN_ID=421614
+L2_RPC_URL=https://sepolia-rollup.arbitrum.io/rpc
+L2_WSS_URL=wss://sepolia-rollup.arbitrum.io/rpc
+L2_CONFIRMATIONS=1
+
+# L2 Core Contract Addresses
+L2_INTEGRATED_VAULT=
 L2_STATE_AGGREGATOR=
-L2_GATEWAY=
-L2_VAULT_MODULE_V3=
-L2_RWA_MODULE_V3=
 
-# Arbitrum Bridge Addresses (Mainnet)
-ARBITRUM_INBOX=0x4Dbd4fc535Ac27206064B68FfCf827b0A60BAB3f
-ARBITRUM_OUTBOX=0x0B9857ae2D4A3DBe74ffE1d7DF045bb7F96E4840
+# L2 DeFi Adapter Addresses
+L2_AAVE_ADAPTER=
+L2_COMPOUND_ADAPTER=
+L2_UNISWAP_ADAPTER=
 
-# Arbitrum Bridge Addresses (Sepolia Testnet)
+# L2 RWA Contract Addresses
+L2_RWA_FACTORY=
+L2_RWA_MARKETPLACE=
+L2_RWA_YIELD_DISTRIBUTOR=
+L2_RWA_COMPLIANCE=
+L2_RWA_VALUATION=
+L2_RWA_GOVERNANCE=
+
+# ============ Kafka Topics (L1/L2) ============
+KAFKA_TOPIC_L1=events.l1
+KAFKA_TOPIC_L2=events.l2
+KAFKA_TOPIC_BRIDGE=events.bridge
+
+# ============ Arbitrum Bridge Addresses ============
+# Sepolia Testnet
 ARBITRUM_SEPOLIA_INBOX=0xaAe29B0366299461418F5324a79Afc425BE5ae21
 ARBITRUM_SEPOLIA_OUTBOX=0x65f07C7D521164a4d5DaC6eB8Fac8DA067A3B78F
+
+# Mainnet (for production)
+# ARBITRUM_INBOX=0x4Dbd4fc535Ac27206064B68FfCf827b0A60BAB3f
+# ARBITRUM_OUTBOX=0x0B9857ae2D4A3DBe74ffE1d7DF045bb7F96E4840
+
+# ============ API Keys (for verification) ============
+ETHERSCAN_API_KEY=your_etherscan_api_key
+ARBISCAN_API_KEY=your_arbiscan_api_key
