--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,26 @@ services:
       - POINTS_RATE=${POINTS_RATE}
       - SCHEDULER_INTERVAL_SEC=${SCHEDULER_INTERVAL_SEC}
 
+  treasury-oracle:
+    build:
+      context: .
+      dockerfile: services/treasury-oracle/Dockerfile
+    container_name: loyalty-treasury-oracle
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable
+      - ORACLE_UPDATE_INTERVAL=1h
+      - TREASURY_API_URL=${TREASURY_API_URL:-}
+      - TREASURY_API_KEY=${TREASURY_API_KEY:-}
+    ports: ["8085:8085"]
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8085/health"]
+      interval: 60s
+      timeout: 10s
+      retries: 3
+
   api:
     build:
       context: .
